# LoudOT-MPC

./: Cargo.toml
loud-ot-mpc/: Cargo.toml
loud-ot-mpc/src/: main.rs
loud_ot_mpc/: Cargo.toml
loud_ot_mpc/benches/: loud_bench.rs
loud_ot_mpc/src/: main.rs
ocelot/src/ot/: alsz.rs  kos.rs  kos_delta.rs  mod.rs
scuttlebutt/src/: channel.rs
