[package]
name = "loud-ot-mpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ocelot.workspace = true
scuttlebutt.workspace = true
rand = "0.8.5"
generic-array = "0.14.7"
sha3 = { version = "0.10.8", features = [] }
blake2 = "0.10.6"
aes = "0.8.3"
bincode = "1.3.3"
serde = "1.0.197"
rand_chacha = "0.3.1"